deploy/local-k8s/arango-single.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arango-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arango-cluster
  template:
    metadata:
      labels:
        app: arango-cluster
    spec:
      containers:
        - name: arangodb
          image: arangodb:3.11
          ports:
            - containerPort: 8529
          volumeMounts:
            - mountPath: /var/lib/arangodb3
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: arango-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: arango-cluster
spec:
  selector:
    app: arango-cluster
  ports:
    - port: 8529
---
apiVersion: v1
kind: Service
metadata:
  name: arango-cluster-ea
spec:
  type: NodePort
  selector:
    app: arango-cluster
  ports:
    - port: 8529
      nodePort: 31235
