deploy/local-k8s/invoker-np.yml

apiVersion: v1
kind: Service
metadata:
  name: invoker-np
  labels:
    platform: oaas
spec:
  selector:
    cr-part: invoker
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      nodePort: 30123
      targetPort: 8080
