deploy/local-k8s/oprc-np.yml
apiVersion: v1
kind: Service
metadata:
  name: invoker-np
  labels:
    platform: oaas
spec:
  selector:
    cr-part: invoker
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      nodePort: 30123
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: package-manager-np
  labels:
    app: package-manager
    platform: oaas
spec:
  selector:
    app: package-manager
    platform: oaas
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      nodePort: 30124
      targetPort: 8080
