deploy/local-k8s/oaas-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oaas-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: "h2c"
spec:
  rules:
    - host: "pm.oaas.127.0.0.1.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: package-manager
                port:
                  number: 80
    - host: "inv.oaas.127.0.0.1.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: invoker
                port:
                  number: 80
